--- a/twitter_crawler/deploy/twitter_stream.service
+++ b/twitter_crawler/deploy/twitter_stream.service
@@ -6,6 +6,7 @@ After=multi-user.target
 Type=idle
 User=ubuntu
 ExecStart=/usr/bin/python3 /home/ubuntu/COMP90024_Assignment2/twitter_crawler/twitter_stream.py  > /home/ubuntu/twitter_stream.log 2>&1
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
