--- a/ansible/install.yml
+++ b/ansible/install.yml
@@ -1,6 +1,11 @@
-- hosts: dbservers
+- hosts: harvestservers
   remote_user: ubuntu
   become: yes
-  become_user: root
   roles:
-     - couch
+    - harvester
+
+# - hosts: dbservers
+#   remote_user: ubuntu
+#   become: yes
+#   roles:
+#     - couch
