adding nltk to ansible

--- a/ansible/roles/harvester/tasks/main.yml
+++ b/ansible/roles/harvester/tasks/main.yml
@@ -18,6 +18,11 @@
     name: couchdb
     executable: pip3
 
+- name: Install nltk
+  pip:
+    name: nltk
+    executable: pip3
+
 - name: Install git
   apt:
     name: git
