--- a/ansible/roles/create_servers/tasks/main.yml
+++ b/ansible/roles/create_servers/tasks/main.yml
@@ -55,6 +55,7 @@
     state: present
   register: os_servers
   loop: "{{ servers }}"
+  notify: Format volume
 
 - name: Add instances to role
   add_host:
