removed volume stuff

--- a/ansible/roles/create_servers/vars/main.yml
+++ b/ansible/roles/create_servers/vars/main.yml
@@ -1,31 +1,15 @@
 servers:
-  - name: test
+  - name: webserver
+    security_groups: "couchdb,ssh,django-dev"
+    groups: dbservers,harvestservers,webservers
+
+  - name: harvester
     security_groups: "couchdb,ssh"
-    volume_name: test_vol
-    volume_size: 10
     groups: dbservers,harvestservers
-
-  # - name: harvester
-  #   security_groups: "couchdb,ssh"
-  #   volume_name: db_cluster_2
-  #   volume_size: 10
-  #   groups: harvestservers,dbservers
-
-  # - name: processor
-  #   security_groups: "couchdb,ssh"
-  #   volume_name: db_cluster_3
-  #   volume_size: 10
-  #   groups: harvestservers,dbservers
-
-  # - name: webserver
-  #   security_groups: "couchdb,ssh,django-dev"
-  #   volume_name: db_cluster_4
-  #   volume_size: 10
-  #   groups: harvestservers
 
 security_groups:
   - name: ssh
-  - name: test
+  - name: couchdb
   - name: django-dev
 
 security_group_rules:
@@ -35,19 +19,19 @@ security_group_rules:
     port_range_max: 22
     remote_ip_prefix: 0.0.0.0/0
 
-  - security_group: test
+  - security_group: couchdb
     protocol: tcp
     port_range_min: 5984
     port_range_max: 5984
     remote_ip_prefix: 0.0.0.0/0
 
-  - security_group: test
+  - security_group: couchdb
     protocol: tcp
     port_range_min: 5986
     port_range_max: 5986
     remote_group: couchdb
 
-  - security_group: test
+  - security_group: couchdb
     protocol: tcp
     port_range_min: 9100
     port_range_max: 9200
