--- a/ansible/install.yml
+++ b/ansible/install.yml
@@ -15,3 +15,10 @@
   roles:
     - common
     - harvester
+
+- hosts: webservers
+  remote_user: ubuntu
+  become: yes
+  roles:
+    - common
+    - webserver
