--- a/ansible/roles/create_servers/vars/main.yml
+++ b/ansible/roles/create_servers/vars/main.yml
@@ -1,9 +1,9 @@
 servers:
   - name: test
-    security_groups: "couchdb,ssh"
+    security_groups: "couchdb,ssh,django-dev"
     volume_name: test_vol
     volume_size: 10
-    groups: dbservers,harvestservers
+    groups: webservers
 
   # - name: harvester
   #   security_groups: "couchdb,ssh"
