--- a/ansible/roles/webserver/tasks/main.yml
+++ b/ansible/roles/webserver/tasks/main.yml
@@ -2,5 +2,17 @@
   apt:
     name: python3
 
+- name: Install django
+  pip:
+    name: django
+    executable: pip3
+
+- name: Clone repo
+  git:
+    repo: "https://{{git_user | urlencode}}:{{git_pass | urlencode}}@github.com/RNagawidjaja/COMP90024_Assignment2.git"
+    dest: "{{ install_location }}"
+  become_user: ubuntu
+  ignore_errors: yes
+
 - name: Run django server
-  shell: python3 /home/ubuntu/web_app/manage.py runserver
+  shell: nohup python3 /home/ubuntu/assignment2/web_app/manage.py runserver {{ inventory_hostname }}:8000 &
