--- a/ansible/roles/create_servers/tasks/main.yml
+++ b/ansible/roles/create_servers/tasks/main.yml
@@ -36,7 +36,7 @@
     name: "{{ item.name }}"
     image: "NeCTAR Ubuntu 18.04 LTS (Bionic) amd64"
     key_name: "team77"
-    flavor: "uom.mse.2c9g"
+    flavor: "uom.general.1c4g"
     availability_zone: "melbourne-qh2-uom"
     security_groups: "{{ item.security_groups }}"
     wait: yes
