--- a/ansible/roles/harvester/tasks/main.yml
+++ b/ansible/roles/harvester/tasks/main.yml
@@ -27,9 +27,8 @@
     repo: "https://{{git_user | urlencode}}:{{git_pass | urlencode}}@github.com/RNagawidjaja/COMP90024_Assignment2.git"
     dest: "{{ install_location }}"
   become_user: ubuntu
-  ignore_errors: yes
   
-- name: Add no proxy ips
+- name: Change DB IP address to a dbserver
   lineinfile:
     path: "{{ install_location }}/twitter_crawler/config.py"
     regexp: '^DATABASE_IP'
