--- a/ansible/install.yml
+++ b/ansible/install.yml
@@ -8,6 +8,10 @@
   roles:
     - common
     - couch
+  environment:
+    http_proxy: "http://wwwproxy.unimelb.edu.au:8000"
+    https_proxy: "http://wwwproxy.unimelb.edu.au:8000"
+    no_proxy: localhost,127.0.0.1,127.0.1.1,ubuntu
 
 - hosts: harvestservers
   remote_user: ubuntu
@@ -15,6 +19,10 @@
   roles:
     - common
     - harvester
+  environment:
+    http_proxy: "http://wwwproxy.unimelb.edu.au:8000"
+    https_proxy: "http://wwwproxy.unimelb.edu.au:8000"
+    no_proxy: localhost,127.0.0.1,127.0.1.1,ubuntu
 
 - hosts: webservers
   remote_user: ubuntu
@@ -22,3 +30,7 @@
   roles:
     - common
     - webserver
+  environment:
+    http_proxy: "http://wwwproxy.unimelb.edu.au:8000"
+    https_proxy: "http://wwwproxy.unimelb.edu.au:8000"
+    no_proxy: localhost,127.0.0.1,127.0.1.1,ubuntu
